--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,5 +4,5 @@ plugins {
 
 dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.9'
-    implementation project(':shared')
+    implementation project(':common')
 }
