--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'io.netty:netty-all:4.1.99.Final'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0-rc1'
 }
 
 test {
